--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-dialog.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-dialog.css
@@ -36,6 +36,7 @@
 .lichkin-dialog {
   position: fixed;
   border-width: 0px 0px 1px 0px;
+  overflow: hidden;
 }
 
 .lichkin-dialog .lichkin-dialog-titleBar {
