readonly fuzzy i18n多层取值

--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-datagrid.css
@@ -202,3 +202,10 @@
 .lichkin-datagrid-invalid .lichkin-datagrid-pageBar .buttons .lichkin-button i {
   color: var(--lichkin-plugin-font-color-invalid);
 }
+
+.lichkin-dialog .lichkin-datagrid .lichkin-datagrid-titleBar,
+.lichkin-dialog .lichkin-datagrid .lichkin-datagrid-searchFormBar,
+.lichkin-dialog .lichkin-datagrid .lichkin-datagrid-toolsBar,
+.lichkin-dialog .lichkin-datagrid .lichkin-datagrid-dataBar,
+.lichkin-dialog .lichkin-datagrid .lichkin-datagrid-pageBar
+{border-left:none;border-right:none;}
